:fire: Fix texte size

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </section>
 
     <section class="container">
-        <div id="status" class="my-5"></div>
+        <div id="status" class="my-5 display-4"></div>
         <div class="row">
             <div data-index="0" class="col-4 border display-3 text-center square"></div>
             <div data-index="1" class="col-4 border display-3 text-center square"></div>
